| Bug #10446 | Illegal mix of collations | ||
|---|---|---|---|
| Submitted: | 8 May 2005 9:38 | Modified: | 2 Dec 2005 21:16 |
| Reporter: | yaniv eylon | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 1.1.9 and 1.1.7 and 1.1.5 | OS: | Microsoft Windows (win xp) |
| Assigned to: | Alexander Barkov | Target Version: | |
[12 May 2005 3:21]
Jorge del Conde
Hi, I was unable to reproduce this bug, can you please tell me what the steps to reproduce it are ? Thanks !
[15 May 2005 6:26]
yaniv eylon
Hi Jorge,
well all i can add to what i rowte last time is create any simpale DB with MyIsam TBL and
write a simple query like i worte : select * from t where id=lapd('xxx',10.' ')
it gives the folowing aswer : Error 'Illegal mix of collations (utf8_bin,IMPLICIT) and
(latin1_swedish_ci,NONE)
i hopr this will help you go on (on the unix version it workes just fine)
have a nice day & sorry for the delay Yaniv
[1 Jun 2005 8:59]
Vasily Kishkin
I was able to reproduce on MySQL 4.1.13, Win 2000 SP4 Error message: Illegal mix of collations (latin1_swedish_ci,IMPLICIT) and (utf8_general_ci,COERCIBLE) for operation '=' Charset variables: +--------------------------+-------------------------+ | Variable_name | Value | +--------------------------+-------------------------+ | character_set_client | latin1 | | character_set_connection | latin1 | | character_set_database | latin1 | | character_set_results | latin1 | | character_set_server | latin1 | | character_set_system | utf8 | | character_sets_dir | E:\data\share\charsets/ | +--------------------------+-------------------------+
[1 Jun 2005 9:00]
Vasily Kishkin
MySQL Query Browser 1.1.9
[18 Jul 2005 14:58]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27248
[21 Nov 2005 14:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/32455
[30 Nov 2005 14:27]
Alexander Barkov
Fixed in 4.1.16 and 5.0.17
[2 Dec 2005 21:16]
Paul DuBois
Noted in 4.1.16, 5.0.17 changelogs.

Description: when i'am trying to write a simple query like select * from t where id=lapd('xxx',10.' ') it runs good from the command line but from the browser i get the following: Error 'Illegal mix of collations (utf8_bin,IMPLICIT) and (latin1_swedish_ci,NONE) please check for the problem. while using older version on thr browser it worked just good How to repeat: yaniv.eylon@flectronics.co.il