  Bug#10446 Illegal mix of collations: item_strfunc.h, item_strfunc.cc, item.cc:   Try to convert a const item into destination   character set. If conversion happens without   data loss, then cache the converted value   and return it during val_str().   Otherwise, if conversion loses data, return   Illeral mix of collations error, as it happened   previously. ctype_recoding.result, ctype_recoding.test:   Fixing tests accordingly.